--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
         <script src="script.js" defer></script>
     </head>
     <body>
+        <button value="Rock">Rock</button>
+        <button value="Paper">Paper</button>
+        <button value="Scissors">Scissors</button>
     </body>
 </html>
