Add HTML for game results

--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
         <script src="script.js" defer></script>
     </head>
     <body>
-        <button value="Rock">Rock</button>
-        <button value="Paper">Paper</button>
-        <button value="Scissors">Scissors</button>
+        <div class="header">Rock, Paper, Scissors</div>
+        <div class="choices">
+            <button value="Rock">Rock</button>
+            <button value="Paper">Paper</button>
+            <button value="Scissors">Scissors</button>
+        </div>
+        <div class="results">
+            <div class="player-choice">
+                <div>Player Choice:</div>
+            </div>
+            <div class="computer-choice">
+                <div>Computer Choice:</div>
+            </div>
+        </div>
+        <div class="round-message"></div>
+        <div class="game-message"></div>
     </body>
 </html>
