Implement DOM display of round results

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
             <button value="Scissors">Scissors</button>
         </div>
         <div class="results">
-            <div class="player-choice">
+            <div class="player-round">
                 <div>Player Choice:</div>
+                <div class="player-choice"></div>
             </div>
-            <div class="computer-choice">
+            <div class="computer-round">
                 <div>Computer Choice:</div>
+                <div class="computer-choice"></div>
             </div>
         </div>
         <div class="round-message"></div>
