Implement DOM display of running scores

--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
                 <div class="computer-choice"></div>
             </div>
         </div>
+        <div class="scores">
+            <div class="player-score">
+                <div>Player Score:</div>
+                <div class="player-score"></div>
+            </div>
+            <div class="computer score">
+                <div>Computer Score:</div>
+                <div class="computer-score"></div>
+            </div>
+        </div>
         <div class="round-message"></div>
         <div class="game-message"></div>
     </body>
