Modify display of player score
Previously, player-score class was assigned to multiple html
elements, causing "Player Score:" label to be overwritten during
gameplay

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             </div>
         </div>
         <div class="scores">
-            <div class="player-score">
+            <div>
                 <div>Player Score:</div>
                 <div class="player-score"></div>
             </div>
-            <div class="computer score">
+            <div>
                 <div>Computer Score:</div>
                 <div class="computer-score"></div>
             </div>
