Positions elements in index.html

--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
             <button value="Scissors">Scissors</button>
         </div>
         <div class="results">
-            <div class="player-round">
+            <div class="player-info">
                 <div>Player Choice:</div>
                 <div class="player-choice"></div>
             </div>
-            <div class="computer-round">
+            <div class="computer-info">
                 <div>Computer Choice:</div>
                 <div class="computer-choice"></div>
             </div>
         </div>
         <div class="scores">
-            <div>
+            <div class="player-info">
                 <div>Player Score:</div>
                 <div class="player-score"></div>
             </div>
-            <div>
+            <div class="computer-info">
                 <div>Computer Score:</div>
                 <div class="computer-score"></div>
             </div>
