--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="header">Rock, Paper, Scissors</div>
+        <div class="header">
+            <h1>Rock, Paper, Scissors</h1>
+        </div>
         <div class="choices">
             <button value="Rock">Rock</button>
             <button value="Paper">Paper</button>
@@ -16,21 +18,21 @@
         </div>
         <div class="results">
             <div class="player-info">
-                <div>Player Choice:</div>
+                <h3>Player Choice:</h3>
                 <div class="player-choice"></div>
             </div>
             <div class="computer-info">
-                <div>Computer Choice:</div>
+                <h3>Computer Choice:</h3>
                 <div class="computer-choice"></div>
             </div>
         </div>
         <div class="scores">
             <div class="player-info">
-                <div>Player Score:</div>
+                <h3>Player Score:</h3>
                 <div class="player-score"></div>
             </div>
             <div class="computer-info">
-                <div>Computer Score:</div>
+                <h3>Computer Score:</h3>
                 <div class="computer-score"></div>
             </div>
         </div>
