Style color/fonts

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     </head>
     <body>
         <div class="header">
-            <h1>Rock, Paper, Scissors</h1>
+            <h1>Rock, Paper, Scissors!</h1>
+            <p>First to 5 wins. Pick one:</p>
         </div>
         <div class="choices">
             <button value="Rock">Rock</button>
